<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="no_result">No user was found for the given query</string>
    <string name="app_name">AWoUSO</string>
    <string name="loginText">Play</string>
    <string name="account">Nume utilizator:</string>
    <string name="passwd">Parola:</string>
    <string name="qotdMarker">QotD</string>
    <string name="chalMarker">Challenges</string>
    <string name="msgMarker">Messages</string>
    <string name="shopMarker">Bazaar</string>
    <string name="topMarker">Tops</string>
    <string name="spQuestMarker">Weekly Quest!</string>
	<string name="challenges">Challenges</string>
    <string name="messages">Messages</string>
    <string name="tops">Top</string>
    <string name="bazaar">Bazaar</string>
    
    <string-array name="list_array">
        <item>WoUSO</item>
    </string-array>

    <string name="exchange_left">Exchange points for gold or gold for points</string>
    <string name="exchange_right">Rate: 1 gold = 9 points, 1 gold = 10.0 points</string>
    <string name="logout">Log out</string>
    <string name="newmessage">New</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="neversee">You should never see this 12321</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="userMsgMarker">msg</string>
    <string name="userSpellMarker">spell</string>
    <string name="userChalMarker">CHALLENGE!</string>

    <dimen name="avatarSize">80dp</dimen>

    <color name="userProfileColor">#FFF</color>
    <color name="userInfoColor">#AAA</color>
    <color name="userLinkColor">#55C</color>
    
    <string name = "firstBar"> | </string>
    <string name = "secondBar"> / </string>
    
    <string name="create_msg">Create message</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="text">Text:</string>
    <string name="send">Send</string>
    <string name="from">From:</string>
    
    <string name="series">Series</string>
    <string name="membersNumber">Number of members</string>
    <string name="level"> - level: </string><string name="rank">Rank: </string>
    
</resources>