<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:paddingTop="10dp" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@color/msg_button_black"
            android:gravity="left"
            android:text="@string/create_msg"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="15" >
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:inputType="String" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textSize="15" >
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:inputType="String" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textSize="15" >
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="String" />
    </LinearLayout>

</LinearLayout>