<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/from"
            android:textSize="15dp" >
        </TextView>

        <!-- <EditText
            android:id="@+id/from"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:inputType="text"
            android:textSize="10dp" /> -->
        
        <TextView
            android:id="@+id/from"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="15dp"
        />
     	
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/subject"
            android:textSize="15dp" >
        </TextView>

        <!-- <EditText
            android:id="@+id/subject"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:inputType="text"
            android:textSize="10dp" /> -->
            
        <TextView 
            android:id="@+id/subject"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="15dp" />
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textSize="15dp" >
        </TextView>

        <!-- <EditText
            android:id="@+id/text"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:inputType="text"
            android:textSize="10dp" /> -->
            
        <TextView
            android:id="@+id/text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="15dp" />    
    </RelativeLayout>
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight=".1"
	    android:layout_marginTop="0dp"
	    android:orientation="horizontal" >
        
		<Button 
	    	android:id="@+id/readmsg"
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:layout_weight=".31"
	    	android:background="@color/msg_button_black"
            android:textColor="@color/white"
            android:textStyle="bold"
	    	android:text="@string/back"/>
		
		<View 
		    android:layout_height="fill_parent"
		    android:layout_weight=".03"
		    android:layout_width="0dp"
		    android:visibility="invisible"
		/>
	
		<Button
		    android:id="@+id/reply"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_weight=".31"
		    android:background="@color/msg_button_black"
            android:textColor="@color/white"
            android:textStyle="bold"
		    android:text="@string/reply"/>
		
		<View 
		    android:layout_height="fill_parent"
		    android:layout_width="0dp"
		    android:layout_weight=".03"
		    android:visibility="invisible"
		/>
		
		<Button 
		    android:id="@+id/delete"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_weight=".31"
		    android:background="@color/msg_button_black"
		    android:textColor="@color/white"
		    android:textStyle="bold"
		    android:text="@string/delete" />
	</LinearLayout>
</LinearLayout>