<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#1C1C1C">
        
        <TextView 
            android:id="@+id/serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:textColor="#FBFBEF"
            android:textSize="30dp"
            android:gravity="left" />
        
        <TextView 
            android:id="@+id/numberOfMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/membersNumber"
            android:textColor="#FBFBEF"
            android:textSize="15dp"
            android:layout_below="@id/serie"
            android:gravity="left"/>
        
        <TextView
            android:id="@+id/rankLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textColor="#FBFBEF"
            android:textSize="15dp"
            android:layout_below="@id/numberOfMembers"
            android:gravity="left" />
        
        <TextView 
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#FBFBEF"
            android:textSize="15dp"
            android:layout_below="@id/numberOfMembers"
            android:layout_toRightOf="@id/rankLabel"
            android:gravity="left" />
         
    </RelativeLayout>
    
    <TabHost
    	android:id="@+id/tabHost"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" >

    	<TabWidget
        	android:id="@android:id/tabs"
        	android:layout_width="fill_parent"
        	android:layout_height="40dp" />

    	<FrameLayout
        	android:id="@android:id/tabcontent"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent" >

        	<LinearLayout
            	android:id="@+id/tab1"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:orientation="vertical"
            	android:paddingTop="60px" >

            	<TextView
                	android:id="@+id/txt1"
                	android:layout_width="fill_parent"
                	android:layout_height="50px"
            	    android:text="@string/neversee" />
        	</LinearLayout>

        	<LinearLayout
            	android:id="@+id/tab2"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:orientation="vertical"
            	android:paddingTop="60px" >

            	<TextView
                	android:id="@+id/txt2"
                	android:layout_width="fill_parent"
                	android:layout_height="50px"
            	    android:text="@string/neversee" />
        	</LinearLayout>

        	<LinearLayout
            	android:id="@+id/tab3"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:orientation="vertical"
            	android:paddingTop="60px" >

            	<TextView
                	android:id="@+id/txt3"
                	android:layout_width="fill_parent"
               		android:layout_height="50px"
            	    android:text="@string/neversee" />
        	</LinearLayout>
    	</FrameLayout>

	</TabHost>

</LinearLayout>