<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >
        
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_alignParentLeft="true"
            android:layout_height="fill_parent">
	        <ImageView
	            android:layout_centerHorizontal="true"
	            android:id="@+id/challenges_btn"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/challenges" />
	        <TextView
	    		android:id="@+id/challenges_text"
	            android:layout_centerHorizontal="true" 
	            android:layout_below="@id/challenges_btn"
	            android:layout_height="wrap_content"	        
	    		android:layout_width="wrap_content"
	    		android:text="@string/challenges" />
	    </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_alignParentRight="true"
            android:layout_height="fill_parent">
	        <ImageView
	            android:id="@+id/messages_btn"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/messages" />
	        <TextView 
	            android:id="@+id/messages_text"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/messages_btn"
	            android:layout_height="wrap_content"	        
	    		android:layout_width="wrap_content"
	    		android:text="@string/messages" />
	    </RelativeLayout>
        
    </RelativeLayout>
   
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >
        
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_alignParentLeft="true"
            android:layout_height="fill_parent">
	        <ImageView
	            android:id="@+id/tops_btn"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/tops" />
	            
	        <TextView 
	            android:id="@+id/tops_text"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/tops_btn"
	            android:layout_height="wrap_content"	        
	    		android:layout_width="wrap_content"
	    		android:text="@string/tops" />
	    </RelativeLayout> 
        
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_alignParentRight="true"
            android:layout_height="fill_parent">
	        <ImageView
	            android:layout_centerHorizontal="true"
	            android:id="@+id/bazaar_btn"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/bazar" />

	        <TextView
	            android:id="@+id/bazaar_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/bazaar_btn"
	            android:layout_centerHorizontal="true"
	            android:text="@string/bazaar" />

	    </RelativeLayout>
        
        
  
        
          
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
  		
        <RelativeLayout
            android:id="@+id/status_cont"
	        android:layout_width="fill_parent"
	        android:layout_alignParentTop="true"
	        android:layout_height="20dp"
	        android:paddingLeft="20dp"
	         android:background="@color/grey" >
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:text="Status cont"
	            android:textColor="@color/white"/> 
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/status_cont"
	        android:layout_width="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_height="wrap_content"
	        android:paddingLeft="20dp">
	        <ImageView
	            android:id="@+id/profileImage"
	            android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:layout_alignParentTop="true"
	            android:src="@drawable/avatar" />
        	<TextView
        	    android:id="@+id/profileName"
        	    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/profileImage"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="horizontal" >

        

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical" >

            <!-- Icon and name -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/level"
                    android:contentDescription="@string/neversee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <!-- Level, points and gold -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/levelNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp" />

                <!-- Points icon -->

                <ImageView
                    android:id="@+id/pointsicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@drawable/points"
                    android:src="@drawable/points" />

                <!-- Points amount -->

                <TextView
                    android:id="@+id/points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:paddingRight="5dp" />

                <!-- Gold icon -->

                <ImageView
                    android:id="@+id/goldicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@drawable/gold"
                    android:src="@drawable/gold" />

                <!-- Gold amount -->

                <TextView
                    android:id="@+id/gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="6" />
            </LinearLayout>

            <!-- Groups -->

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/group_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <!-- Spells -->

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/spells_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <!-- User avatar -->

        

        <!-- Level progress -->

        <ProgressBar
            android:id="@+id/vertical_progressbar"
            style="@style/Widget.ProgressBar.Vertical"
            android:layout_width="12dip"
            android:layout_height="100dip"
            android:layout_gravity="right"
            android:layout_marginRight="5dp" />
    </LinearLayout>

</LinearLayout>