<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/chalback"
        style="@style/specialButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="34dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/chalnext"
        style="@style/specialButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chalback"
        android:layout_alignBottom="@+id/chalback"
        android:layout_alignParentRight="true"
        android:layout_marginRight="44dp"
        android:text="@string/next" />

    <TextView
        android:id="@+id/chaltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/neversee"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <RelativeLayout 
        android:id="@+id/cronometru"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/chaltext" 
        android:layout_centerHorizontal="true" >
        
        <TextView
            android:id="@+id/challenge_timer_dots"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text=":"
            android:textSize="15sp" />
        
        <TextView
            android:id="@+id/challenge_timer_minutes"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignRight="@id/challenge_timer_dots"
            android:paddingRight="5dp"
            android:text="0"
            android:textSize="15sp" />
        
        <TextView
            android:id="@+id/challenge_timer_seconds"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignLeft="@id/challenge_timer_dots"
            android:paddingLeft="5dp"
            android:text="00"
            android:textSize="15sp" />
         
    </RelativeLayout>

    <ScrollView 
        android:id="@+id/challenge_scroll_view"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:layout_below="@id/cronometru"
        android:layout_above="@id/chalnext" >
        
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
    		
    		<CheckBox
        		android:id="@+id/challenge_checkbox_1"
	        	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignParentTop="true"
    	    	android:layout_alignParentLeft="true"
        		android:text="@string/neversee" />

    		<CheckBox
        		android:id="@+id/challenge_checkbox_2"
	        	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_below="@id/challenge_checkbox_1"
        		android:text="@string/neversee" />
    		
    		<CheckBox
        		android:id="@+id/challenge_checkbox_3"
	        	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_below="@id/challenge_checkbox_2"
        		android:text="@string/neversee" />
    		
    		<CheckBox
        		android:id="@+id/challenge_checkbox_4"
	        	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_below="@id/challenge_checkbox_3"
        		android:text="@string/neversee" />
    		
    		<CheckBox
        		android:id="@+id/challenge_checkbox_5"
	        	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_below="@id/challenge_checkbox_4"
        		android:text="@string/neversee" />
    		
    		<CheckBox
        		android:id="@+id/challenge_checkbox_6"
	        	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_below="@id/challenge_checkbox_5"
        		android:text="@string/neversee" />
    		
    		<CheckBox
        		android:id="@+id/challenge_checkbox_7"
	        	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_below="@id/challenge_checkbox_6"
        		android:text="@string/neversee" />
    		
    		<CheckBox
        		android:id="@+id/challenge_checkbox_8"
	        	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_below="@id/challenge_checkbox_7"
        		android:text="@string/neversee" />
    		
    	</RelativeLayout>
    </ScrollView>
    
</RelativeLayout>